--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Andrew Howard - slide show
 email: your-email@domain.com
 baseurl: "/slides" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "tkumpanenko.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 copyright: "2018 © Andrew Howard"
 
